[Shubhamrazz]Added: GetAllUsers Reuest

--- a/FundoNote_Ado.net/appsettings.json
+++ b/FundoNote_Ado.net/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Fundoonotes": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Fundoonotes": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Fundonote_adonet;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 
 }
